--- a/config.json
+++ b/config.json
@@ -136,15 +136,6 @@
         "difficulty": 1
       },
       {
-        "slug": "beer-song",
-        "name": "Beer Song",
-        "uuid": "9bcc869c-580a-4ec7-9d84-09c97796aff2",
-        "practices": [],
-        "prerequisites": [],
-        "difficulty": 1,
-        "status": "deprecated"
-      },
-      {
         "slug": "binary-search",
         "name": "Binary Search",
         "uuid": "c31f4ea7-241c-4f81-9de9-d748847cdf14",
@@ -308,6 +299,16 @@
           "arrays",
           "enums"
         ],
+        "difficulty": 1
+      },
+      {
+        "slug": "gigasecond",
+        "name": "Gigasecond",
+        "uuid": "b1fb2914-6741-4478-b00c-2edfd31bb34d",
+        "practices": [
+          "dates"
+        ],
+        "prerequisites": [],
         "difficulty": 1
       },
       {
